# teacher-managment

./: pyproject.toml
teacher_managment/: database.py  main.py
teacher_managment/model/: notification.py  performance.py  schedule.py  teacher.py
teacher_managment/routers/: notifications.py  performance.py  schedules.py  teachers.py
teacher_managment/schemas/: notification.py  performance.py  schedule.py  teacher.py
